--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,11 +20,11 @@
 	<div class="clear"></div>
 	<div class="links">
 		<ul>
-			<li>About</li>
-			<li>Education</li>
-			<li>Experience</li>
-			<li>Recent Project</li>
-			<li>Skills</li>
+			<li><button class="btn btn-large about">About</button></li>
+			<li><button class="btn btn-large edu">Education</button></li>
+			<li><button class="btn btn-large exp">Experience</button></li>
+			<li><button class="btn btn-large proj">Recent Project</button></li>
+			<li><button class="btn btn-large skills">Skills</button></li>
 		</ul>
 	</div>
 	<div class="clear"></div>
