--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,18 +18,9 @@
 		</ul>
 	</div>
 	<div class="clear"></div>
-	<div class="links">
-		<ul>
-			<li><button class="btn btn-large about">About</button></li>
-			<li><button class="btn btn-large edu">Education</button></li>
-			<li><button class="btn btn-large exp">Experience</button></li>
-			<li><button class="btn btn-large proj">Recent Project</button></li>
-			<li><button class="btn btn-large skills">Skills</button></li>
-		</ul>
-	</div>
-	<div class="clear"></div>
-	<%= yield %>
-	<div class="intro">
-	</div>
+	<div class="links"></div>
+	<div class="content"></div>
+	<div class="barrier"></div>
+	<div class="intro"></div>
 </body>
 </html>
