--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,9 @@
 	<div class="clear"></div>
 	<div class="links"></div>
 	<div class="content"></div>
-	<div class="barrier"></div>
+	<div class="barrier">
+		____________________________________________________________
+	</div>
 	<div class="intro"></div>
 </body>
 </html>
