--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -144,7 +144,13 @@
     box-shadow: 0px 0px 20px rgba(255,255,255,0.8); 
 }
 
-.container p {
+.content {
+    width: 90%;
+    margin: 0px auto;
+    display: none;
+}
+
+.content p {
     margin: 10px;
 }
 
