cleaned up links

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="header">
-		Samir Merchant
+		<%= link_to "Samir Merchant", root_url %>
 	</div>
 	<div class="contact">
 		<ul>
