--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,8 @@
 		<div class="barrier">
 			____________________________________________________________
 		</div>
+		<div class="site_info"></div>
+		<div class="clear"></div>
 		<div class="intro"></div>
 </body>
 </html>
