--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -83,8 +83,8 @@
 
 .header {
     width: 100%;
-    padding: 30px 0px 10px 0px;
-    margin: 20px 0px 10px 0px;
+    padding: 10px 0px 10px 0px;
+    margin: 10px 0px 10px 0px;
     text-align: center; 
     font-size: 250%;
 }
@@ -116,14 +116,13 @@
     text-align: center;
 }
 
-.links ul li button { 
-    margin: 25px; 
+.links ul li img { 
     -webkit-transition: all 0.5s ease; 
     -moz-transition: all 0.5s ease; 
     -o-transition: all 0.5s ease; /*Reflection*/ 
 } 
 
-.links ul li button:hover { 
+.links ul li img:hover { 
     opacity: 1; /*Reflection*/ 
     -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(.7, transparent), to(rgba(0,0,0,0.4))); /*Glow*/ 
     -webkit-box-shadow: 0px 0px 20px rgba(255,255,255,0.8); 
@@ -146,7 +145,7 @@
 
 .intro {
     width: 80%;
-    padding: 60px 50px 20px 50px;
+    padding: 30px 50px 20px 50px;
     margin: 20px auto;
     font-size: 500%;
     text-align: center;
@@ -178,7 +177,8 @@
     -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(.7, transparent), to(rgba(0,0,0,0.4))); 
     -webkit-box-shadow: 0px 0px 20px rgba(255,255,255,0.8); 
     -moz-box-shadow: 0px 0px 20px rgba(255,255,255,0.8); 
-    box-shadow: 0px 0px 20px rgba(255,255,255,0.8); 
+    box-shadow: 0px 0px 20px rgba(255,255,255,0.8);
+    cursor: pointer;
 }
 
 .content {
@@ -193,28 +193,28 @@
 }
 
 .about_info.well {
-   	background-color: rgba(180,40,40,0.3);
+   	background-color: rgba(184,130,80,0.3);
    	border: none;
    	overflow: auto;
     height: 100%;
 }
 
 .exp_info.well {
-    background-color:rgba(36,206,37,0.3);
+    background-color:rgba(179,15,0,0.3);
     border: none;
     overflow: auto;
     height: 100%;
 }
 
 .proj_info.well {
-    background-color:rgba(52,21,229,0.3);
+    background-color:rgba(128,82,85,0.3);
     border: none;
     overflow: auto;
     height: 100%;
 }
 
 .skills_info.well {
-    background-color:rgba(63,237,41,0.3);
+    background-color:rgba(110,118,122,0.3);
     border: none;
     overflow: auto;
     height: 100%;
@@ -237,8 +237,14 @@
     max-width: 100%;
 }
 
-.barrier {
-    padding: 0px;
+.barrier-bottom {
+    padding: 10px 0px 0px 0px;
+    width: 100%;
+    text-align: center;
+}
+
+.barrier-top {
+    padding: 0px 0px 20px 0px;
     width: 100%;
     text-align: center;
 }
@@ -246,13 +252,14 @@
 .site_info {
     width: 90%;
     margin: 0px auto;
+    padding-bottom: 20px;
     overflow: auto;
 }
 
 .site_info_header {
     width: 90%;
     margin: 0px auto;
-    padding: 20px 0px 30px 0px;
+    padding: 20px 0px 0px 0px;
     overflow: auto;
     text-align: center;
 }
