--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -24,6 +24,7 @@
    outline: 0;
    padding: 0;
    vertical-align: baseline;
+   font-family: Helvetica;
  }
 
  a {
@@ -128,6 +129,7 @@
     -webkit-box-shadow: 0px 0px 20px rgba(255,255,255,0.8); 
     -moz-box-shadow: 0px 0px 20px rgba(255,255,255,0.8); 
     box-shadow: 0px 0px 20px rgba(255,255,255,0.8); 
+    cursor: pointer;
 }
 
 .unselected {
@@ -250,10 +252,9 @@
 }
 
 .site_info {
-    width: 90%;
+    width: 60%;
     margin: 0px auto;
     padding-bottom: 20px;
-    overflow: auto;
 }
 
 .site_info_header {
@@ -267,6 +268,7 @@
 .info_link {
     margin: 0px auto;
     color: green;
+    padding: 10px 0px 20px 0px;
 }
 
 .info_link:hover {
@@ -280,6 +282,7 @@
 
 .info_text {
     display: none;
+    padding-top: 10px;
 }
 
 
