--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -243,7 +243,7 @@
 }
 
 .skills_list {
-    width: 50%;
+    width: 33.33%;
     float:left;
 }
 
@@ -270,12 +270,13 @@
 }
 
 .pair {
-    width: 100%;
+    width: 90%;
+    margin: 0px auto;
     padding: 20px 0px 20px 0px;
 }
 
 .preview {
-    width: 65%;
+    width: 60%;
     height: 100%;
     border-radius: 15px; 
     float: left;
@@ -295,7 +296,7 @@
 
 
 .descr {
-    width: 30%;
+    width: 40%;
     height: 100%;
     float: left;
     
@@ -390,9 +391,39 @@ strong {
     top: 0;
 }
 
+#slideshow2 {
+    position: relative;
+    margin: 0px auto;
+    width: 100%;
+    height: 350px;
+}
+
+#slideshow2 img {
+    position: absolute;
+    left: 0;
+    top: 0;
+}
+
 #hidden {
     display: none;
 }
+
+.image_wrapper {
+    width: 700px;
+    height: 500px;
+    margin: 0px auto;
+    padding: 10px 0px 10px 0px;
+    
+}
+
+.half {
+    width: 50%;
+    float: left;
+}
+
+.half ul li {
+    color: orange;
+
 
 
 
