meta data and favicon added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,15 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+	<meta property="og:title" content="Samir Merchant :: For Hire">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="http://samirmerchant.com">
+	<meta property="og:image" content="/assets/sort of me.png">
+	<meta property="og:site_name" content="Samir Merchant :: For Hire">
+	<meta property="og:description" content="Take on me. Take me on. I'll be gone. In a day or two.">
+	<meta name="description" content="Take on me. Take me on. I'll be gone. In a day or two.">
+	<meta name="title" content="Samir Merchant :: For Hire">
+	<link rel="shortcut icon" href="/assets/favicon.ico">
 </head>
 <body>
 		<div class="header">
