--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -391,29 +391,37 @@ strong {
     top: 0;
 }
 
-#slideshow2 {
-    position: relative;
-    margin: 0px auto;
-    width: 100%;
-    height: 350px;
-}
-
-#slideshow2 img {
-    position: absolute;
-    left: 0;
-    top: 0;
-}
-
 #hidden {
     display: none;
 }
 
 .image_wrapper {
-    width: 700px;
-    height: 500px;
+    width: 80%;
     margin: 0px auto;
     padding: 10px 0px 10px 0px;
     
+}
+
+.studio {
+    width: 90%;
+    margin: 0px auto;
+    -webkit-box-shadow: 5px 5px 5px #111;
+    box-shadow: 5px 5px 5px #111;
+}
+
+.player {
+    width: 400px;
+    margin: 0px auto;
+    text-align: center;
+    padding: 40px 0px 0px 0px;
+}
+
+#simple {
+    -webkit-box-shadow: 5px 5px 5px #000;
+    box-shadow: 5px 5px 5px #000;
+    background-color:rgba(255,255,255,0.2);
+    border-radius: 15px;
+    padding: 10px;
 }
 
 .half {
