about, background, portfolio mobile done

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -462,3 +462,11 @@ strong {
     font-weight: bold;
     text-decoration: none;
 }
+
+#background ul li p a {
+    color: #222;
+}
+
+#portfolio ul li p a {
+    color: #222;
+}
