--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -163,7 +163,58 @@
 			<h2>Check out my band!</h2>
 			<div class="scroll">
 				<ul class="rounded">
-					<li><%= image_tag 'studio.jpg'%></li>
+					<li style="text-align:center"><%= image_tag 'studio.jpg', width: '320'%></li>
+					<li><div class="mobile_player"><iframe id="simple" width="320" height="300" style="position: relative; display: block; width: 320px; height: 300px;" src="http://bandcamp.com/EmbeddedPlayer/v=2/album=1542218114/size=grande3/bgcol=f42525/linkcol=ea3e3e/transparent=true/" allowtransparency="true" frameborder="0"><a href="http://simplemachinesband.bandcamp.com/album/spirit-of-the-shoreland-ep">Spirit of the Shoreland EP by Simple Machines</a></iframe></div>
+					</li>
+				</ul>
+				<h2>Other powers</h2>
+				<ul class="rounded">
+					<li>Statistics
+						<ul class="rounded">
+							<li>My economics degree isn't just for show, you know</li>
+							<li>Familiar with anything from hypothesis testing and distributions to confidence intervals and regressions</li>
+						</ul>
+					</li>
+					<li>Graphical Skills
+						<ul class="rounded">
+							<li>Experience with Adobe Photoshop and the more unwieldy, yet open source, GIMP
+							</li>
+							<li>Made all the icons on this page!
+							</li>
+						</ul>
+					</li>
+					<li>Languages
+						<ul class="rounded">
+							<li>French: competent conversationally</li>
+							<li>Flemish: limited competency</li>
+							<li>Hindi: incompetent</li>
+						</ul>
+					</li>
+				</ul>
+				<h2>More</h2>
+				<ul class="rounded">
+					<li>Music
+						<ul class="rounded">
+							<li>Performing musician with an indie Chicago band (see above)
+							</li>
+						</ul>
+					</li>
+					<li>Sport
+						<ul class="rounded">
+							<li>Religious Manchester United supporter since the age of five
+							</li>
+							<li>Besides soccer, I do my best to keep up with rugby, cricket, tennis, & Formula One, among other sports
+							</li>
+						</ul>
+					</li>
+					<li>Favourite Writers
+						<ul class="rounded">
+							<li>Friedrich Nietzsche</li>
+							<li>Oscar Wilde</li>
+							<li>Douglas Adams</li>
+							<li>Hermann Hesse</li>
+						</ul>
+					</li>
 				</ul>
 			</div>
 		</div>
