mobile link updated

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,6 @@
  html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, a, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp,
  small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, hr, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td,
  article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video {
-   background: transparent;
    border: 0;
    font-size: 100%;
    color: white;
@@ -63,24 +62,33 @@
  }
  
  body {
-   line-height: 1;
-   	background-attachment: fixed;
-	background-image: url('black wallpaper.png');
-	background-repeat: no-repeat;
-	height: 100%;
-	-webkit-background-size: cover;
-	-moz-background-size: cover;
-	-o-background-size: cover;
-	background-size: cover;
-	overflow-y: auto;
-	margin: 0;
-	padding: 0;
+/*      background-attachment: fixed;
+    background-image: url('black wallpaper.png');
+    background-repeat: no-repeat;
+    height: 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+*/	overflow-y: auto;
+	margin-top: 0px;
+	padding-top: 0px;
  }
+ 
   
 
 
 /*** GLOBAL ***/
 
+.mobile_link  {
+    position: relative;
+}
+
+.mobile_link img {
+    position: absolute;
+    top: 0px;
+    right: 0px;
+}
 
 .header {
     width: 100%;
