--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
 		 }
 
 		});
+		
 	</script>
 </head>
 <body>
@@ -37,9 +38,9 @@
 		</div>
 		<div class="contact">
 			<ul>
-				<li><%= link_to "samirthemerchant@gmail.com", 'mailto:samirthemerchant@gmail.com' %></li>
+				<li id="test"><%= link_to "samirthemerchant@gmail.com", 'mailto:samirthemerchant@gmail.com' %></li>
 				<li>+91 9819 449 239</li>
-				<li><%= link_to "github.com/FangedParakeet", 'http://github.com/FangedParakeet', target: 'blank' %></li>
+				<li id="test"><%= link_to "github.com/FangedParakeet", 'http://github.com/FangedParakeet', target: 'blank' %></li>
 			</ul>
 		</div>
 		<div class="clear"></div>
