--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Samir Merchant :: For Hire</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application", "grunt", "jquery.color" %>
+  <%= javascript_include_tag "application", "jquery.color" %>
   <%= csrf_meta_tags %>
 	<meta property="og:title" content="Samir Merchant :: For Hire">
 	<meta property="og:type" content="website">
