css clean up and nav bar prep

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,13 +38,13 @@
 		</div>
 		<div class="contact">
 			<ul>
-				<li id="test"><%= link_to "samirthemerchant@gmail.com", 'mailto:samirthemerchant@gmail.com' %></li>
+				<li><%= link_to "samirthemerchant@gmail.com", 'mailto:samirthemerchant@gmail.com' %></li>
 				<li>+91 9819 449 239</li>
-				<li id="test"><%= link_to "github.com/FangedParakeet", 'http://github.com/FangedParakeet', target: 'blank' %></li>
+				<li><%= link_to "github.com/FangedParakeet", 'http://github.com/FangedParakeet', target: 'blank' %></li>
 			</ul>
 		</div>
+		<nav class="links" role="navigation"></nav>
 		<div class="clear"></div>
-		<div class="links"></div>
 		<div class="barrier-top">
 			________________________________________
 			<%= image_tag 'barrier.png', width: '300' %>
