--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -130,21 +130,24 @@
 }
 
 .links {
-    width: 90%;
+    min-width: 90%;
+    height: 100%;
     padding: 20px 0px 70px 0px;
     margin: 10px auto;
     font-size: 150%;
+    overflow: auto;
 }
 
 .links ul li {
     float: left;
-    width: 25%;
+    width: 15em;
     padding-top: 10px;
     padding-bottom: 20px;
     text-align: center;
 }
 
 .links ul li img { 
+    display: inline;
     -webkit-transition: all 0.5s ease; 
     -moz-transition: all 0.5s ease; 
     -o-transition: all 0.5s ease; /*Reflection*/ 
@@ -153,9 +156,7 @@
 .links ul li img:hover { 
     opacity: 1; /*Reflection*/ 
     -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(.7, transparent), to(rgba(0,0,0,0.4))); /*Glow*/ 
-    -webkit-box-shadow: 0px 0px 20px rgba(255,255,255,0.8); 
-    -moz-box-shadow: 0px 0px 20px rgba(255,255,255,0.8); 
-    box-shadow: 0px 0px 20px rgba(255,255,255,0.8); 
+
     cursor: pointer;
 }
 
@@ -167,9 +168,6 @@
 .selected {
     opacity: 1; /*Reflection*/ 
     -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(.7, transparent), to(rgba(0,0,0,0.4))); /*Glow*/ 
-    -webkit-box-shadow: 0px 0px 20px rgba(255,255,255,0.8); 
-    -moz-box-shadow: 0px 0px 20px rgba(255,255,255,0.8); 
-    box-shadow: 0px 0px 20px rgba(255,255,255,0.8); 
 }
 
 .intro {
@@ -204,9 +202,6 @@
 .intro span:hover { 
     opacity: 1; 
     -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(.7, transparent), to(rgba(0,0,0,0.4))); 
-    -webkit-box-shadow: 0px 0px 20px rgba(255,255,255,0.8); 
-    -moz-box-shadow: 0px 0px 20px rgba(255,255,255,0.8); 
-    box-shadow: 0px 0px 20px rgba(255,255,255,0.8);
     cursor: pointer;
 }
 
