--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,16 +35,19 @@
 			<%= link_to (image_tag 'mobile.png', size: '100x100', onmouseover: "this.src='assets/mobileinvert.png'", onmouseout: "this.src='assets/mobile.png'"), root_url(mobile: "1") %>
 		</div>
 		<div class="clear"></div>
-		<div class="header">
-			<div id="logo">
-				<%= link_to (image_tag 'samir merchant.png',width: '400'), root_url %>
+		<div class="container">
+			<div class="header">
+				<div id="logo">
+					<%= link_to (image_tag 'samir merchant.png',width: '400'), root_url %>
+				</div>
+				<div class="links"></div>
 			</div>
-			<div class="links"></div>
+			<div class="clear"></div>
+			<div class="clear"></div>
+			<div class="content">
+				<div class="intro"></div>
+			</div>
 		</div>
-		<div class="clear"></div>
-		<div class="intro"></div>
-		<div class="clear"></div>
-		<div class="content"></div>
 		<div class="footer">
 			<div class="contact">
 				<ul>
