--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -445,9 +445,8 @@ strong {
 
 .footer {
     width: 100%;
-    background-color: gray;
-    box-shadow: 0px -2px 1px gray;
-}
+    background-color: #424242;
+    box-shadow: 0px -2px 1px #424242}
 
 /***  MOBILE ***/
 
