--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,8 @@
 	<meta property="og:description" content="Take on me. Take me on. I'll be gone. In a day or two.">
 	<meta name="description" content="Take on me. Take me on. I'll be gone. In a day or two.">
 	<link rel="shortcut icon" href="/assets/favicon.ico">
+	<script type="text/javascript" src="http://code.jquery.com/jquery-1.9.1.js"></script>
+	<script type="text/javascript" src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 	<script type="text/javascript">
 		$(document).ready(function() {
 
