--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -175,19 +175,14 @@
 .links ul li:hover { 
     opacity: 1; /*Reflection*/ 
     cursor: pointer;
+}
+
+.links ul li:active {
+    opacity: 0.5;
 } 
 
 .links ul li img {
     height: 36px;
-}
-
-.unselected {
-    opacity: 0.8; 
-    -webkit-box-reflect: below 0px -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(.7, transparent), to(rgba(0,0,0,0.1)));     
-}
-
-.selected {
-    opacity: 1; /*Reflection*/ 
 }
 
 .intro {
