--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,7 +18,7 @@
  article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video {
    border: 0;
    font-size: 100%;
-   color: white;
+   color: gray;
    margin: 0;
    outline: 0;
    padding: 0;
@@ -96,7 +96,7 @@
 }
 
 .header {
-    width: 1050px;
+    width: 100%;
     margin: 10px 0px 10px 0px;
     text-align: center; 
     font-size: 250%;
@@ -440,8 +440,8 @@ strong {
 
 .footer {
     width: 100%;
-    background-color: #424242;
-    box-shadow: 0px -2px 1px #424242}
+    background-color: #C5C5C5;
+    box-shadow: 0px -2px 1px #C5C5C5}
 
 /***  MOBILE ***/
 
