--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,7 +1,7 @@
 @import "twitter/bootstrap/bootstrap";
 body { 
 	padding-top: 0px;
-	background-color: #000000;
+	background-color: #ffffff;
 }
 
 @import "twitter/bootstrap/responsive";
