--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,13 +34,13 @@
 </head>
 <body>
 		<div class="mobile_link">
-			<%= link_to (image_tag 'mobile.png', size: '100x100', onmouseover: "this.src='assets/mobileinvert.png'", onmouseout: "this.src='assets/mobile.png'"), root_url(mobile: "1") %>
+			<%= link_to (image_tag 'mobileinvert.png', size: '100x100', onmouseover: "this.src='assets/mobile.png'", onmouseout: "this.src='assets/mobileinvert.png'"), root_url(mobile: "1") %>
 		</div>
 		<div class="clear"></div>
 		<div class="container">
 			<div class="header">
 				<div id="logo">
-					<%= link_to (image_tag 'samir merchant.png',width: '400'), root_url %>
+					<%= link_to (image_tag 'samir merchant w.png',width: '400'), root_url %>
 				</div>
 				<div class="links"></div>
 			</div>
