--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
 		    $('#logo').animate( { backgroundColor: hue }, 4000);
 				$('.links ul li').animate( {backgroundColor: hue }, 4000);
 				$('.left').animate( {backgroundColor: hue}, 4000);
+				$('.intro').animate()
 		    spectrum();
 		 }
 
